# ewxNDFD

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  index.md
notebooks/: ewxndfd.ipynb  example_forecast_api.weather.gov-gridpoints.json  ndfd_api.ipynb  ndfd_example_summary_forecast.json  ndfd_example_summary_forecast.xml  ndfd_example_unsummarized_forecast.xml
src/ewxndfd/: __init__.py  datetime_utils.py  ewx_datetime_utils.py  mint_ndfd.py  ndfd.py  ndfd_forecast_api.py
src/ewxndfd/ewx/: __init__.py  ewx_datetime.py  ewx_ndfd_file.py  mint_ndfd.py
tests/: test_tests.py
tests/ndfd_sample_files/: maxr_20251119t00.csv  maxr_20251119t06.csv  maxr_20251119t12.csv  maxr_20251119t18.csv  maxr_20251120t00.csv  maxr_20251120t06.csv  maxr_20251120t12.csv  maxr_20251120t18.csv  maxt_20251119t00.csv  maxt_20251119t06.csv  maxt_20251119t12.csv  maxt_20251119t18.csv  maxt_20251120t00.csv  maxt_20251120t06.csv  maxt_20251120t18.csv  minr_20251119t00.csv  minr_20251119t06.csv  minr_20251119t12.csv  minr_20251119t18.csv  minr_20251120t00.csv  minr_20251120t06.csv  minr_20251120t12.csv  minr_20251120t18.csv  mint_20251119t00.csv  mint_20251119t06.csv  mint_20251119t12.csv  mint_20251119t18.csv  mint_20251120t00.csv  mint_20251120t06.csv  mint_20251120t18.csv  pops_20251119t00.csv  pops_20251119t06.csv  pops_20251119t12.csv  pops_20251119t18.csv  pops_20251120t00.csv  pops_20251120t06.csv  pops_20251120t12.csv  pops_20251120t18.csv  qpf6_20251119t00.csv  qpf6_20251119t06.csv  (+46 more)
tests/system/: test_import.py
tests/unit/: conftest.py  test_ewx_datetime_utils.py  test_example.py  test_mint_ndfd_subclass.py  test_ndfd_forecast_api.py  test_ndfd_mint.py
