################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs","hatch-zipped-directory",
]

################################################################################
# Project Configuration
################################################################################

[project]
name = "ewxndfd"
# You can chose to use dynamic versioning with hatch or static where you add it manually.
dynamic = ["version"]
description = """
Python package to work with National Digital Forecast Database (NDFD) gridded 
weather forecast for the MSU Enviroweather / Michigan Ag Weather Network 
databases.
"""
authors = [
    { name = "Patrick Bills", email = "billspat@msu.edu" },
]
license = "MIT"
requires-python = ">= 3.11" # Adjust based on the minimum version of Python that you support
readme = {"file" = "README.md", "content-type" = "text/markdown"}
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
# TODO: add keywords
keywords = []
# TODO: add dependencies
dependencies = [
    "ipython>=9.7.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/enviroweather/ewxndfd"
"Source Code" = "https://github.com/enviroweather/ewxndfd"
"Bug Tracker" = "https://github.com/enviroweather/ewxndfd/issues"
Documentation = "https://ewxndfd.readthedocs.io"
Download = "https://pypi.org/project/ewxndfd/#files"

[project.scripts]
ndfd_daily = "ewxndfd.ndfd_forecast_api:main"

[project.optional-dependencies]
# The groups below should be in the [development-groups] table
# They are here now because hatch hasn't released support for them but plans to
# in Mid November 2025.
dev = [
    "hatch",
    "pre-commit",
]

docs = [
    "sphinx~=8.0",
    "myst-parser>=4.0",
    "pydata-sphinx-theme~=0.16",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autoapi>=3.6.0",
    "sphinx_design>=0.6.1",
    "sphinx-copybutton>=0.5.2",
]

build = [
    "pip-audit",
    "twine",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-raises",
    "pytest-randomly",
    "pytest-xdist",
]
style = [
    "pydoclint",
    "ruff",
]


################################################################################
# Tool Configuration
################################################################################

# Hatch is building your package's wheel and sdist
# This tells hatch to only include Python packages (i.e., folders with __init__.py) in the build.
# read more about package building, here:
# https://www.pyopensci.org/python-package-guide/package-structure-code/python-package-distribution-files-sdist-wheel.html
[tool.hatch.build]
only-packages = true

# This tells Hatch to build the package from the src/ directory.
# Read more about src layouts here: https://www.pyopensci.org/python-package-guide/package-structure-code/python-package-structure.html
[tool.hatch.build.targets.wheel]
packages = ["src/ewxndfd"]

[tool.hatch.build.targets.zipped-directory]
install-name = "org.example.test"
sources = [ "/src",]

[tool.hatch.build.hooks.vcs]
version-file = "src/ewxndfd/_version.py"

[tool.hatch.version]
source = "vcs"

######## Configure pytest for your test suite ########
[tool.pytest.ini_options]
testpaths = ["tests"] # Tells pytest what directory tests are in
markers = ["raises"] # Tells pytest to not raise a warning if you use @pytest.mark.raises

[tool.coverage.paths]
source = [
    "src/ewxndfd",
    "*/site-packages/ewxndfd",
]

[tool.coverage.run]
# Ensures code coverage is measured for branches (conditional statements with different outcomes) in your code.
branch = true
parallel = true
omit = [
    "src/ewxndfd/_version.py",
]

[tool.coverage.report]
# This configures the output test coverage report
exclude_lines = ["pragma: no cover"]
precision = 2


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D107",  # 'Missing docstring in __init__' ignored because pydoclint wants us to document the class instead.
    "D203",  # '1 blank line required before class docstring' ignored because we want no blank line.
    "D212",  # 'Multi-line docstring summary should start at the first line' ignored because we want the summary to start on the second line.
    "D407",  # 'Missing dashed underline after section' ignored because Google style docstrings don't underline.
    "D413",  # 'Missing blank line after section' ignored .
    "D401",  # 'First line should be in imperative mood' ignored
    "ANN001",  # Missing type annotation for {arg} in function" ignored
    "ANN201",  # 'Missing type annotation for {return}'.
]
exclude = [
    "src/ewxndfd/_version.py",
    "docs/conf.py",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "E401",  # 'Multiple imports on one line'
    "E402",  # 'Module level import not at top of file'
    "F401",  # 'Imported but unused'
    "I001",  # 'Import block is un-sorted or un-formatted' ignored because we may have to import in a particular, not-alphabetical order.
]
"tests/**/*.py" = [
    "S101",  # 'Use of assert detected' ignored because we are using pytest.
    "INP001",  # 'Insecure input' ignored because we are testing.
    "ANN201",  # 'Missing type annotation for {return}' ignored because all tests return `None`.
]

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["src", "ewxndfd"]
lines-after-imports = 1

[tool.pydoclint]
style = "numpy"
arg-type-hints-in-signature = false
arg-type-hints-in-docstring = true
check-return-types = false
check-yield-types = false
exclude = "_version.py"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
# Use UV to create Hatch environments
[tool.hatch.envs.default]
installer = "uv"

################################################################################
# Hatch Environments
################################################################################

#--------------- Build and check your package ---------------#

# This table installs the tools you need to test and build your package
[tool.hatch.envs.build]
description = """Test the installation the package."""
features = [
    "build",
]
detached = true

# This table installs created the command hatch run install:check which will build and check your package.
[tool.hatch.envs.build.scripts]
check = [
    "hatch build {args:--clean}",
    "twine check dist/*",
]

#--------------- Run tests ---------------#
[tool.hatch.envs.test]
description = """Run the test suite."""
features = [
    "tests",
]

[[tool.hatch.envs.test.matrix]]
# test on just one Python version (used in prod) to stay w/in github free tier limits
python = ["3.11"]

[tool.hatch.envs.test.scripts]
run = "pytest {args:--cov=ewxndfd --cov-report=term-missing --cov-report=xml}"

#--------------- Build and preview your documentation ---------------#

# This sets up a hatch environment with associated dependencies that need to be installed
[tool.hatch.envs.docs]
description = """Build or serve the documentation."""
# Install optional dependency test for docs
features = [
    "docs",
]

# This table contains the scripts that you can use to build and serve your docs
# hatch run docs:build will build your documentation
# hatch run docs:serve will serve them 'live' on your computer locally
[tool.hatch.envs.docs.scripts]
build = ["sphinx-build {args:-W -b html docs docs/_build}"]
serve = ["sphinx-autobuild docs --watch src/ewxndfd {args:-b html docs/_build/serve}"]


#--------------- Format & style your code ---------------#

[tool.hatch.envs.style]
description = """Check the code and documentation style."""
features = [
    "style",
]
detached = true

[tool.hatch.envs.style.scripts]
docstrings = "pydoclint src/ tests/"
code = "ruff check {args}"
format = "ruff format {args}"
check = ["docstrings", "code"]

#--------------- Check security for your dependencies ---------------#

[tool.hatch.envs.audit]
description = """Check dependencies for security vulnerabilities."""
features = [
    "build",
]

[tool.hatch.envs.audit.scripts]
check = ["pip-audit"]
